--- a/frontend/Arajanlat.html
+++ b/frontend/Arajanlat.html
@@ -3,22 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Balatoni Vityilló</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Balatoni Vityilló</h1>
     <nav class="navbar">
         <ul>
-            <li> <a href="HomePage.html">Home</a></li>
+           <li> <a href="HomePage.html">Home</a></li>
             <li><a href="Berles.html">Bérbe adás/Bérlés</a></li>
             <li><a href="Eladas.html">Adás/Vétel</a></li>
-            <li><a href="Felujitas.html">Felújítás</a></li>
+              <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Felújítás</a>
+                <div class="dropdown-content">
+                    <a href="Arajanlat.html">Árajánlat</a>
+                    <a href="Felujitaskerese.html">Felújítás kérése</a>
+                </div>
+            </li>
             <li> <a href="Beosztas.html">(Ember függő) Beosztás</a></li>   
         </ul>
     </nav>
+    <h1>Balatoni Vityilló</h1>
     <main>
-        <h3>This is the felujitas</h3>
+        <h3>This is the Árajánlat</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt necessitatibus quas laudantium earum minima, eos amet quidem sint voluptate, voluptas consequuntur provident nemo officiis quo ea veniam fugit perspiciatis temporibus.   </p>
     </main>
 </body>
