--- a/frontend/BerbeAdas.html
+++ b/frontend/BerbeAdas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Balatoni Vityilló</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -38,8 +38,34 @@
     </nav>
     <h1>Balatoni Vityilló</h1>
     <main>
-        <h3>This is the profil</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt necessitatibus quas laudantium earum minima, eos amet quidem sint voluptate, voluptas consequuntur provident nemo officiis quo ea veniam fugit perspiciatis temporibus.   </p>
+        <h3>Bérbe adás oldal</h3> 
+        <div class="card">
+            <input type="text" id="blocation" class="adasokmezo form-control" placeholder="Lokáció" required><br>
+            <input type="text" id="brooms" class="adasokmezo form-control" placeholder="Szobák száma" required><br>
+            <input type="text" id="barea" class="adasokmezo form-control" placeholder="Alapterület" required><br>
+            <input type="text" id="bprice" class="adasokmezo form-control" placeholder="Bérlési ár / nap" required><br>
+            <button onclick="berletMentes()">Bérbe adás</button>
+        </div>
     </main>
+
+    <script>
+        function berletMentes() {
+            const berlet = {
+                hely: document.getElementById('blocation').value,
+                szobak: document.getElementById('brooms').value,
+                terulet: document.getElementById('barea').value,
+                ar: document.getElementById('bprice').value
+            };
+
+            if (!berlet.hely || !berlet.szobak || !berlet.terulet || !berlet.ar) {
+                alert("Minden mezőt töltsön ki!");
+                return;
+            }
+
+            // Mentés a böngészőbe
+            localStorage.setItem('ujBerlet', JSON.stringify(berlet));
+            window.location.href = "Berles.html";
+        }
+    </script>
 </body>
 </html>
