--- a/frontend/Felujitaskerese.html
+++ b/frontend/Felujitaskerese.html
@@ -9,11 +9,23 @@
 </head>
 <body>
     <nav class="navbar">
-        <ul>
-           <li> <a href="HomePage.html">Home</a></li>
-            <li><a href="Berles.html">Bérbe adás/Bérlés</a></li>
-            <li><a href="Eladas.html">Adás/Vétel</a></li>
-              <li class="dropdown">
+        <ul>  
+            <li> <a href="HomePage.html">Home</a></li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Bérlés</a>
+                <div class="dropdown-content">
+                    <a href="BerbeAdas.html">Bérbe adás</a>
+                    <a href="Berles.html">Bérlés</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Ingatlan</a>
+                <div class="dropdown-content">
+                    <a href="Adas.html">Adás</a>
+                    <a href="Vetel.html">Vétel</a>
+                </div>
+            </li>
+            <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Felújítás</a>
                 <div class="dropdown-content">
                     <a href="Arajanlat.html">Árajánlat</a>
@@ -21,6 +33,7 @@
                 </div>
             </li>
             <li> <a href="Beosztas.html">(Ember függő) Beosztás</a></li>   
+            <li> <a href="Profil.html">Profil</a></li>
         </ul>
     </nav>
     <main class="felujitas-main">
