--- a/frontend/login.html
+++ b/frontend/login.html
@@ -8,14 +8,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </head>
 <body>
-    
     <nav class="navbar">
         <ul>  
             <li> <a href="HomePage.html">Home</a></li>
-            <li><a href="Berles.html">Bérbe adás/Bérlés</a></li>
-            <li><a href="Eladas.html">Adás/Vétel</a></li>
-            <li><a href="Felujitas.html">Felújítás</a></li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Bérlés</a>
+                <div class="dropdown-content">
+                    <a href="BerbeAdas.html">Bérbe adás</a>
+                    <a href="Berles.html">Bérlés</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Ingatlan</a>
+                <div class="dropdown-content">
+                    <a href="Adas.html">Adás</a>
+                    <a href="Vetel.html">Vétel</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Felújítás</a>
+                <div class="dropdown-content">
+                    <a href="Arajanlat.html">Árajánlat</a>
+                    <a href="Felujitaskerese.html">Felújítás kérése</a>
+                </div>
+            </li>
             <li> <a href="Beosztas.html">(Ember függő) Beosztás</a></li>   
+            <li> <a href="Profil.html">Profil</a></li>
         </ul>
     </nav>
     <section class="hero">
