admin oldal fejlesztes

--- a/frontend/Admin_munkasok.html
+++ b/frontend/Admin_munkasok.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Balatoni Vityilló</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+   
 </head>
 <body>
     <nav class="navbar">
@@ -49,9 +50,38 @@
 </nav>
 
 <main class="admin-main-content">
-    <h1>Munkások kezelése</h1>
+  <div class="admin-section">
+    <h2>Szakemberek</h2>
+    <div class="worker-box">
+        <div class="worker-row">
+            <span>Kiss János</span>
+            <span>kiss.janos@email.hu</span>
+            <span>+36 30 123 4567</span>
+        </div>
+        <div class="worker-row">
+            <span>Nagy Péter</span>
+            <span>nagy.peter@email.hu</span>
+            <span>+36 20 987 6543</span>
+        </div>
+  
+
     
+    </div>
+  </div>
+  <button id="addWorkerbtn">Szakember hozzáadása</button>
+
+  <div id="workerModal" class="modal hidden">
+    <div class="modal-content">
+        <h3>Szakember hozzáadása</h3>
+        <label>E-mail cím:</label>
+        <input type="email" id="workerEmail" placeholder="emailpelda@gmail.com">
+        <div class="modal-actions">
+            <button id="saveWorkerbtn">Mentés</button>
+            <button id="closeWorkerbtn">Mégse</button>
+        </div>
+    </div>
+  </div>
 </main>
-    
+<script src="js/admin.js"></script>
 </body>
 </html>
