--- a/frontend/HomePage.html
+++ b/frontend/HomePage.html
@@ -34,7 +34,7 @@
             </li>
             <li> <a href="Beosztas.html">(Ember függő) Beosztás</a></li>   
             <li> <a href="Profil.html">Profil</a></li>
-            <li> <a href="admin.html">Admin</a></li>
+            <li> <a href="Admin.html">Admin</a></li>
         </ul>
     </nav>
       <section class="hero">
